implemented the scss preprocessor

--- a/src/components/app-filter/app-filter.css
+++ b/src/components/app-filter/app-filter.css
@@ -1,3 +1,13 @@
 .btn-group {
     margin-top: 20px;
 }
+
+.btn-light {
+    color: black;
+    background-color: rgb(255, 255, 255);
+    box-shadow: 5px 5px 10px rgba(0,0,0, .15);
+}
+
+.btn-outline-light {
+    color:black;
+}
